# IX-HapticSight

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
configs/: culture_profiles.yaml  force_limits.yaml
docs/: index.md  spec.md  state_machine.md
docs/architecture/: execution_adapter.md  node_graph.md  package_map.md  runtime_overview.md
docs/benchmarks/: metrics.md  overview.md  scenario_catalog.md
docs/governance/: privacy_data_handling.md  safety_case.md  standards_crosswalk.md  threat_model.md
docs/hil/: calibration.md  fault_injection.md  test_rig_architecture.md
docs/replay/: event_log_schema.md
docs/safety/: fault_handling.md  invariants.md  requirements_traceability.md  retreat_semantics.md
examples/: quickstart.py
sim/scenes/: basic_room.json
src/ohip/: __init__.py  consent_manager.py  contact_planner.py  nudge_scheduler.py  rest_pose.py  safety_gate.py  schemas.py
src/ohip_bench/: __init__.py  models.py  reporting.py  runner.py  (+1 more)
tests/: test_bench_models.py  test_benchmark_reporting.py  test_benchmark_runner.py  test_benchmark_scenarios.py  test_event_logging.py  test_event_recorder.py  test_execution_adapter_contracts.py  test_force_torque.py  test_nudge_scheduler.py  test_proximity.py  test_replay.py  test_runtime_config.py  test_runtime_coordinator.py  test_runtime_service.py  test_runtime_state.py  test_schemas.py  test_session_store.py  test_signal_health.py  test_simulated_execution_adapter.py  test_tactile.py  test_thermal.py
(+20 files in other folders)
