[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ix-hapticsight-ohip"
version = "0.1.0"
description = "Safety-first optical-haptic interaction protocol reference implementation."
authors = [
  { name = "Bryce Lovell" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0"
]
keywords = [
  "robotics",
  "human-robot-interaction",
  "haptics",
  "safety",
  "consent",
  "protocol"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
